impleemnt async for remaining audio services

--- a/examples/portaudio/CMakeLists.txt
+++ b/examples/portaudio/CMakeLists.txt
@@ -54,9 +54,9 @@ add_executable(wakeword wake_word.cpp)
 target_link_libraries(wakeword PRIVATE sensorycloud)
 target_link_libraries(wakeword PRIVATE portaudio)
 
-# add_executable(wakeword_async wake_word_async.cpp)
-# target_link_libraries(wakeword_async PRIVATE sensorycloud)
-# target_link_libraries(wakeword_async PRIVATE portaudio)
+add_executable(wakeword_async wake_word_async.cpp)
+target_link_libraries(wakeword_async PRIVATE sensorycloud)
+target_link_libraries(wakeword_async PRIVATE portaudio)
 
 add_executable(wakeword_callback wake_word_callback.cpp)
 target_link_libraries(wakeword_callback PRIVATE sensorycloud)
@@ -68,9 +68,9 @@ add_executable(sound_id sound_id.cpp)
 target_link_libraries(sound_id PRIVATE sensorycloud)
 target_link_libraries(sound_id PRIVATE portaudio)
 
-# add_executable(sound_id_async sound_id_async.cpp)
-# target_link_libraries(sound_id_async PRIVATE sensorycloud)
-# target_link_libraries(sound_id_async PRIVATE portaudio)
+add_executable(sound_id_async sound_id_async.cpp)
+target_link_libraries(sound_id_async PRIVATE sensorycloud)
+target_link_libraries(sound_id_async PRIVATE portaudio)
 
 add_executable(sound_id_callback sound_id_callback.cpp)
 target_link_libraries(sound_id_callback PRIVATE sensorycloud)
@@ -82,9 +82,9 @@ add_executable(transcribe transcribe.cpp)
 target_link_libraries(transcribe PRIVATE sensorycloud)
 target_link_libraries(transcribe PRIVATE portaudio)
 
-# add_executable(transcribe_async transcribe_async.cpp)
-# target_link_libraries(transcribe_async PRIVATE sensorycloud)
-# target_link_libraries(transcribe_async PRIVATE portaudio)
+add_executable(transcribe_async transcribe_async.cpp)
+target_link_libraries(transcribe_async PRIVATE sensorycloud)
+target_link_libraries(transcribe_async PRIVATE portaudio)
 
 add_executable(transcribe_callback transcribe_callback.cpp)
 target_link_libraries(transcribe_callback PRIVATE sensorycloud)
