--- a/Dockerfile.CentOS.8
+++ b/Dockerfile.CentOS.8
@@ -43,7 +43,7 @@ RUN yum -y update
 RUN yum -y upgrade
 # Install dependencies for the SDK.
 RUN yum -y group install "Development Tools"
-RUN yum install -y autoconf libtool pkg-config git openssl-devel cmake
+RUN yum install -y autoconf libtool pkg-config git cmake
 
 # Install the latest version of CMake. CMake does not officially support CentOS
 # 7 anymore, so CMake must be compiled from source.
