--- a/Dockerfile.Debian.11
+++ b/Dockerfile.Debian.11
@@ -44,7 +44,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 RUN apt-get update
 RUN apt-get -y upgrade
 # Install dependencies for the SDK.
-RUN apt-get install -y build-essential autoconf libtool pkg-config git cmake libssl-dev
+RUN apt-get install -y build-essential autoconf libtool pkg-config git cmake
 
 # ----------------------------------------------------------------------------
 # MARK: Protobuf and gRPC
