--- a/Dockerfile.Debian.9
+++ b/Dockerfile.Debian.9
@@ -44,7 +44,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 RUN apt-get update
 RUN apt-get -y upgrade
 # Install dependencies for the SDK.
-RUN apt-get install -y build-essential autoconf libtool pkg-config git libssl-dev
+RUN apt-get install -y build-essential autoconf libtool pkg-config git
 
 # Install the latest version of CMake. CMake does not officially support Debian
 # 9 anymore, so CMake must be compiled from source.
