--- a/Dockerfile.RHEL.8
+++ b/Dockerfile.RHEL.8
@@ -42,7 +42,7 @@ ENV TZ=US/Mountain
 RUN yum -y update
 RUN yum -y upgrade
 # Install dependencies for the SDK.
-RUN yum install -y autoconf libtool pkg-config gcc gcc-c++ git openssl-devel cmake
+RUN yum install -y autoconf libtool pkg-config gcc gcc-c++ git cmake
 
 # Install the latest version of CMake. CMake does not officially support RHEL
 # 8 anymore, so CMake must be compiled from source.
