--- a/Dockerfile.Ubuntu.20.04
+++ b/Dockerfile.Ubuntu.20.04
@@ -44,7 +44,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 RUN apt-get update
 RUN apt-get -y upgrade
 # Install dependencies for the SDK.
-RUN apt-get install -y build-essential autoconf libtool pkg-config cmake git libssl-dev
+RUN apt-get install -y build-essential autoconf libtool pkg-config cmake git
 
 # ----------------------------------------------------------------------------
 # MARK: Protobuf and gRPC
