--- a/Dockerfile.Ubuntu.21.10
+++ b/Dockerfile.Ubuntu.21.10
@@ -41,10 +41,10 @@ ARG DEBIAN_FRONTEND=noninteractive
 # ----------------------------------------------------------------------------
 
 # Update Ubuntu software repositories.
-RUN apt-get update
+RUN apt-get --fix-missing update
 RUN apt-get -y upgrade
 # Install dependencies for the SDK.
-RUN apt-get install -y build-essential autoconf libtool pkg-config cmake git libssl-dev
+RUN apt-get install -y build-essential autoconf libtool pkg-config cmake git
 
 # ----------------------------------------------------------------------------
 # MARK: Protobuf and gRPC
