--- a/Dockerfile.Debian.10
+++ b/Dockerfile.Debian.10
@@ -41,7 +41,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 # ----------------------------------------------------------------------------
 
 # Update Debian software repositories.
-RUN apt-get update
+RUN apt-get --fix-missing update
 RUN apt-get -y upgrade
 # Install dependencies for the SDK.
 RUN apt-get install -y build-essential autoconf libtool pkg-config git
@@ -51,7 +51,7 @@ RUN apt-get install -y build-essential autoconf libtool pkg-config git
 RUN apt-get install -y wget
 RUN wget https://github.com/Kitware/CMake/releases/download/v3.22.1/cmake-3.22.1.tar.gz
 RUN tar -xvf cmake-3.22.1.tar.gz
-RUN cd /cmake-3.22.1 && ./bootstrap && make && make install
+RUN cd /cmake-3.22.1 && ./bootstrap -- -DCMAKE_USE_OPENSSL=OFF && make && make install
 
 # ----------------------------------------------------------------------------
 # MARK: Protobuf and gRPC
