--- a/Dockerfile.RHEL.7
+++ b/Dockerfile.RHEL.7
@@ -49,7 +49,7 @@ RUN yum install -y autoconf libtool pkg-config gcc gcc-c++ git
 RUN yum install -y wget make
 RUN wget https://github.com/Kitware/CMake/releases/download/v3.22.1/cmake-3.22.1.tar.gz
 RUN tar -xvf cmake-3.22.1.tar.gz
-RUN cd /cmake-3.22.1 && ./bootstrap && make && make install
+RUN cd /cmake-3.22.1 && ./bootstrap -- -DCMAKE_USE_OPENSSL=OFF && make && make install
 
 # ----------------------------------------------------------------------------
 # MARK: Protobuf and gRPC
