--- a/Dockerfile.Ubuntu.16.04
+++ b/Dockerfile.Ubuntu.16.04
@@ -41,7 +41,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 # ----------------------------------------------------------------------------
 
 # Update Ubuntu software repositories.
-RUN apt-get update
+RUN apt-get --fix-missing update
 RUN apt-get -y upgrade
 # Install dependencies for the SDK.
 RUN apt-get install -y build-essential autoconf libtool pkg-config git
