--- a/examples/audio/CMakeLists.txt
+++ b/examples/audio/CMakeLists.txt
@@ -69,28 +69,28 @@ target_link_libraries(transcribe_callback PRIVATE portaudio)
 
 # --- Create Enrollment --------------------------------------------------------
 
-add_executable(biometric_enroll biometric_enroll.cpp)
-target_link_libraries(biometric_enroll PRIVATE sensorycloud)
-target_link_libraries(biometric_enroll PRIVATE portaudio)
+add_executable(enroll enroll.cpp)
+target_link_libraries(enroll PRIVATE sensorycloud)
+target_link_libraries(enroll PRIVATE portaudio)
 
-add_executable(biometric_enroll_async biometric_enroll_async.cpp)
-target_link_libraries(biometric_enroll_async PRIVATE sensorycloud)
-target_link_libraries(biometric_enroll_async PRIVATE portaudio)
+add_executable(enroll_async enroll_async.cpp)
+target_link_libraries(enroll_async PRIVATE sensorycloud)
+target_link_libraries(enroll_async PRIVATE portaudio)
 
-add_executable(biometric_enroll_callback biometric_enroll_callback.cpp)
-target_link_libraries(biometric_enroll_callback PRIVATE sensorycloud)
-target_link_libraries(biometric_enroll_callback PRIVATE portaudio)
+add_executable(enroll_callback enroll_callback.cpp)
+target_link_libraries(enroll_callback PRIVATE sensorycloud)
+target_link_libraries(enroll_callback PRIVATE portaudio)
 
 # --- Authenticate -------------------------------------------------------------
 
-add_executable(biometric_authenticate biometric_authenticate.cpp)
-target_link_libraries(biometric_authenticate PRIVATE sensorycloud)
-target_link_libraries(biometric_authenticate PRIVATE portaudio)
+add_executable(authenticate authenticate.cpp)
+target_link_libraries(authenticate PRIVATE sensorycloud)
+target_link_libraries(authenticate PRIVATE portaudio)
 
-add_executable(biometric_authenticate_async biometric_authenticate_async.cpp)
-target_link_libraries(biometric_authenticate_async PRIVATE sensorycloud)
-target_link_libraries(biometric_authenticate_async PRIVATE portaudio)
+add_executable(authenticate_async authenticate_async.cpp)
+target_link_libraries(authenticate_async PRIVATE sensorycloud)
+target_link_libraries(authenticate_async PRIVATE portaudio)
 
-add_executable(biometric_authenticate_callback biometric_authenticate_callback.cpp)
-target_link_libraries(biometric_authenticate_callback PRIVATE sensorycloud)
-target_link_libraries(biometric_authenticate_callback PRIVATE portaudio)
+add_executable(authenticate_callback authenticate_callback.cpp)
+target_link_libraries(authenticate_callback PRIVATE sensorycloud)
+target_link_libraries(authenticate_callback PRIVATE portaudio)
