--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,11 +30,10 @@ include(FetchContent)
 option(SENSORY_CLOUD_BUILD_TESTS "Build test cases" OFF)
 option(SENSORY_CLOUD_GENERATE_PROTO "Generate proto header and source files" OFF)
 option(SENSORY_CLOUD_BUILD_SECURE_CREDENTIAL_STORE "Build SecureCredentialStore" OFF)
-option(SENSORY_CLOUD_GENERATE_MOCK "Generate mock header for testing" OFF)
 
 # --- Proto Files ------------------------------------------------------------
 
-if (SENSORY_CLOUD_GENERATE_MOCK)
+if (SENSORY_CLOUD_BUILD_TESTS)
     set(GRPC_OUT "generate_mock_code=true:")
 else()
     set(GRPC_OUT "")
@@ -152,6 +151,13 @@ if (SENSORY_CLOUD_BUILD_TESTS)
     )
     FetchContent_MakeAvailable(Catch2)
 
+    FetchContent_Declare(googletest
+        URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
+    )
+    # For Windows: Prevent overriding the parent project's compiler/linker settings
+    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+    FetchContent_MakeAvailable(googletest)
+
     # Find the source files for the test code to compile iteratively
     file(GLOB_RECURSE TEST_SOURCES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/tests/*.cpp)
     foreach(TEST_SOURCE IN ITEMS ${TEST_SOURCES})
@@ -161,8 +167,7 @@ if (SENSORY_CLOUD_BUILD_TESTS)
         string(REPLACE ".cpp" "" BINARY_NAME ${BINARY_NAME})
         # Create the binary and link it with the required libraries
         add_executable(${BINARY_NAME} ${TEST_SOURCE})
-        target_link_libraries(${BINARY_NAME} PRIVATE sensorycloud)
-        target_link_libraries(${BINARY_NAME} PRIVATE Catch2::Catch2)
+        target_link_libraries(${BINARY_NAME} PRIVATE sensorycloud Catch2::Catch2 gmock)
         list(APPEND TEST_BINARIES ${BINARY_NAME})
     endforeach()
     # Create a combined target to compile all of the test codes
